Added single bags

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </header>
     <main>
         <div class="black">
-          <h2 class="center white-text">World of plasticbags</h2>
-          <h4 class="center white-text"></h4></h4>
+            <h2 class="center white-text">World of plasticbags</h2>
+            <h4 class="center white-text"></h4></h4>
             <div id="particles-js"></div>
             <div class="globe">
                 <div class="world">
@@ -397,12 +397,13 @@
                                 <td>der aufwändige landwirtschaftliche Anbau von Energiepflanzen, die für die Herstellung biologisch abbaubarer Plastiktüten nötig sind, wirkt sich besonders negativ auf die Umwelt aus.</td>
                                 <td>Wasser- und Energieverbrauch, Eutrophierung und Versauerung</td>
                                 <td>-</td>
-                                <td> Durch das Recycling von Polyethylen können die CO2-Emissionen bei der Herstellung um 45 Prozent reduziert werden.
-  für die Produktion einer einzigen Tonne Polyethylen aus Recyclingmaterialien immer noch 780 Kilogramm CO2 emittiert.</td>
+                                <td> Durch das Recycling von Polyethylen können die CO2-Emissionen bei der Herstellung um 45 Prozent reduziert werden. für die Produktion einer einzigen Tonne Polyethylen aus Recyclingmaterialien immer noch 780 Kilogramm CO2
+                                    emittiert.
+                                </td>
                             </tr>
                             <tr>
                                 <th>Verwendetes material</th>
-                                <td>Neugranulat aus fossilem Rohöl, Polyethylen,  Wasser, Farbe</td>
+                                <td>Neugranulat aus fossilem Rohöl, Polyethylen, Wasser, Farbe</td>
                                 <td>Papier</td>
                                 <td>70 Prozent aus Rohöl, 30 Prozent aus nachwachsenden Rohstoffen</td>
                                 <td>Baumwolle, Bast oder Flachs</td>
@@ -413,13 +414,95 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 m8">
+                        <div class="card-panel">
+                            <h4>Einweg-Plastiktüten aus Polyethylen</h4>
+                        </div>
+                    </div>
+                    <div class="col s12 m4">
+                        <div class="card-panel center">
+                            <img class="responsive-img" src="http://www.duh.de/typo3temp/pics/8f6783b6dc.jpg" alt="Einweg-Plastiktüten aus Polyethylen" />
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 m4">
+                        <div class="card-panel center">
+                            <img class="responsive-img" src="http://www.duh.de/typo3temp/pics/f34083ba58.jpg" alt="Einweg-Papiertüten" />
+                        </div>
+                    </div>
+                    <div class="col s12 m8">
+                        <div class="card-panel">
+                            <h4>Einweg-Papiertüten</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 m8">
+                        <div class="card-panel">
+                            <h4>"Biologisch abbaubare" Plastiktüten</h4>
+                        </div>
+                    </div>
+                    <div class="col s12 m4">
+                        <div class="card-panel center">
+                            <img class="responsive-img" src="http://www.duh.de/typo3temp/pics/1358f6d1bc.jpg" alt="Einweg-Plastiktüten aus Polyethylen" />
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 m4">
+                        <div class="card-panel center">
+                            <img class="responsive-img" src="images/jutebeutel.jpg" alt="Einweg-Papiertüten" />
+                        </div>
+                    </div>
+                    <div class="col s12 m8">
+                        <div class="card-panel">
+                            <h4>Jutebeutel</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 m8">
+                        <div class="card-panel">
+                            <h4>Mehrweg-Tragetaschen aus Kunststoff</h4>
+                        </div>
+                    </div>
+                    <div class="col s12 m4">
+                        <div class="card-panel center">
+                            <img class="responsive-img" src="http://www.duh.de/typo3temp/pics/f80048707c.jpg" alt="Einweg-Plastiktüten aus Polyethylen" />
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 m4">
+                        <div class="card-panel center">
+                            <img class="responsive-img" src="http://www.duh.de/typo3temp/pics/1b46728150.jpg" alt="Einweg-Papiertüten" />
+                        </div>
+                    </div>
+                    <div class="col s12 m8">
+                        <div class="card-panel">
+                            <h4>Recyclingtüte</h4>
+                            <div class="row">
+                              <div class="col s12 m8">
+
+                              </div>
+                              <div class="col s12 m4">
+
+                              </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer class="page-footer">
         <div class="footer-copyright">
             <div class="container">
                 Anjo, Joshua und Tooom
-                <a class="waves-effect waves-light btn modal-trigger right" href="#impressum">Impressum</a>
+                <!-- <a class="waves-effect waves-light btn modal-trigger right" href="#impressum">Impressum</a> -->
             </div>
         </div>
     </footer>
