Texte texte und styling

--- a/index.html
+++ b/index.html
@@ -99,12 +99,15 @@
                 <div class="row card-panel">
                     <div class="col s12 center">
                         <h3><i class="mdi-content-send black-text"></i></h3>
-                        <h4>Gibt es Alternativen?</h4>
-                        <p class="left-align light">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices
-                            eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida
-                            ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae
-                        </p>
+                        <h4>Was ist denn so schlimm an Plastiktüten?</h4>
+                        <div class="left-align light">
+                            <p>Plastiktüten an sich sind Super. Sie sind leicht, billig, wasserdicht und ausgesprochen robust. Sie schützen den Inhalt vor Feuchtigkeit, Schmutz, Schädlingen, etc. Ein wichtiger Faktor ist außerdem, dass sie wiederverwendbar
+                                sind. Allerdings wir sie so gut wie nie wiederverwendet.</p>
+                            <p>Plastik ist für uns und vor allem für die Umwelt wirklich schädlich.Es gibt 600 verschieden Chemikalien, die in Plastik vorkommen können und 200 davon gelten als besonders bedenklich. Bei Männern kann eine hohe Kunstoff konzentration
+                                im Blut zu Impotenz oder bis zu 50 Prozent weniger Spermien sorgen. Auch Frauen leiden unter Plastik: Die giftigen Stoffe gelangen in die Eier und schädigen so schon die nächste Generation. Man spricht davon, dass Krebs,
+                                Asthma und Allergien durch Plastik entstehen können; dass Unkonzentriertheit und Fettleibigkeit mit Plastik in Zusammnhang gebracht wird. Sogar dümmer soll uns das Plastik machen. Und selbst im Krankenhaus wird uns das
+                                Plastik in Form von Weichmachern im PVC gefährlich. Denn dies ist in Infusionsschläuchen und Blutbeuteln enthalten.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="row card-panel" style="z-index:10;" id="essays">
@@ -320,13 +323,12 @@
             <div class="container">
                 <div class=" card-panel">
                     <div class="row ">
-                        <div class="col s12">
+                        <!-- <div class="col s12">
                             <h5 class="center">Bewegte bilder sind toll</h5> Schau dir jetzt den Film "Plasc Planet" an oder einen unserer Filme :)
-                        </div>
-                        <div class="col s12">
-                            <div class="video-container">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/OimFv2496Zs" frameborder="0" allowfullscreen></iframe>
-                            </div>
+                        </div> -->
+
+                        <div class="video-container">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/OimFv2496Zs" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -338,9 +340,9 @@
                         <h3 class="center">Auswertung</h3>
                         <div class="hide-on-med-and-up center">
                             <img src="images/idk.png" class="repsonsive-img" alt="" />
-                            <p class="flow-text">Leider sind Tabelle auf Mobilgeräten schwer darzustellen :/</p>
+                            <p class="flow-text">Leider sind Tabellen auf Mobilgeräten schwer darzustellen :/</p>
                             <p class="flow-text">Schnapp dir am besten einen Laptop oder ein Tablet um einen Blick auf die Tabelle zu werfen ;)</p>
-                            <button type="button" class="trotzdem waves-effect waves-light btn" name="button">Nerv mich nicht! Zeigs mir</button>
+                            <button type="button" class="trotzdem waves-effect waves-light btn" name="button">Nerv mich nicht! Zeigs mir trotzdem</button>
                         </div>
                     </div>
                     <div class="row">
@@ -415,10 +417,29 @@
                 </div>
             </div>
             <div class="container">
+                <!-- <div class="card-panel">
+                    <div class="row">
+                        <h3 class="center">Zusammenfassung:</h3>
+                    </div>
+                </div> -->
                 <div class="row">
                     <div class="col s12 m8">
                         <div class="card-panel">
                             <h4>Einweg-Plastiktüten aus Polyethylen</h4>
+                            <div class="row">
+                                <div class="col s12 m9">
+                                    <ul>
+                                        <li><span><strong>Gewicht:</strong> 30 Gramm</span></li>
+                                        <li><span><strong>Biologisch abbaubar:</strong> Nein</span></li>
+                                        <li><span><strong>Benutzungsdauer:</strong> Ca: 25 min</span></li>
+                                        <li><span><strong>Energieaufwand:</strong> ca. 30,97 Millionen Tonnen CO2- Emissionen Jährlich.</span></li>
+                                        <li><span><strong>Verwendetes material:</strong> Neu-granulat aus fossilem Rohöl, Polyethylen, Wasser, Farbe.</span></li>
+                                    </ul>
+                                </div>
+                                <div class="col s12 m3">
+                                    <span class="emoji">👎</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col s12 m4">
@@ -436,6 +457,20 @@
                     <div class="col s12 m8">
                         <div class="card-panel">
                             <h4>Einweg-Papiertüten</h4>
+                            <div class="row">
+                                <div class="col s12 m9">
+                                    <ul>
+                                        <li><span><strong>Gewicht:</strong> 65 Gramm</span></li>
+                                        <li><span><strong>Biologisch abbaubar:</strong> ✅</span></li>
+                                        <li><span><strong>Benutzungsdauer:</strong> Ca: 25 min</span></li>
+                                        <li><span><strong>Energieaufwand:</strong> Bei der Herstellung wird mehr Energie benötigt und Wasser und Luft werden mehr belastet als bei der Herstellung von <u>Plastiktüten</u>.</span></li>
+                                        <li><span><strong>Verwendetes material:</strong> Papierrohstoff Zellulose (Neumaterial)</span></li>
+                                    </ul>
+                                </div>
+                                <div class="col s12 m3">
+                                    <span class="emoji">👎</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -443,6 +478,20 @@
                     <div class="col s12 m8">
                         <div class="card-panel">
                             <h4>"Biologisch abbaubare" Plastiktüten</h4>
+                            <div class="row">
+                                <div class="col s12 m9">
+                                    <ul>
+                                        <li><span><strong>Gewicht:</strong> 30 Gramm</span></li>
+                                        <li><span><strong>Biologisch abbaubar:</strong> ✅</span></li>
+                                        <li><span><strong>Benutzungsdauer:</strong> Ca: 25 min</span></li>
+                                        <li><span><strong>Energieaufwand:</strong> - </span></li>
+                                        <li><span><strong>Verwendetes material:</strong> 70 Prozent aus Rohöl, 30 Prozent aus nachwachsenden Rohstoffen.</span></li>
+                                    </ul>
+                                </div>
+                                <div class="col s12 m3">
+                                    <span class="emoji">👎</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col s12 m4">
@@ -460,6 +509,20 @@
                     <div class="col s12 m8">
                         <div class="card-panel">
                             <h4>Jutebeutel</h4>
+                            <div class="row">
+                                <div class="col s12 m9">
+                                    <ul>
+                                        <li><span><strong>Gewicht:</strong> 65 Gramm</span></li>
+                                        <li><span><strong>Biologisch abbaubar:</strong> ✅</span></li>
+                                        <li><span><strong>Benutzungsdauer:</strong> Müssen zwischen 25 und 32 Mal wiederverwendet werden, um besser als Polyethylen-Tüten abzuschneiden.</span></li>
+                                        <li><span><strong>Energieaufwand:</strong> Wasser- und Energieverbrauch, Eutrophierung und Versauerung</span></li>
+                                        <li><span><strong>Verwendetes material:</strong> Baumwolle, Bast oder Flachs</span></li>
+                                    </ul>
+                                </div>
+                                <div class="col s12 m3">
+                                    <span class="emoji">👍</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -467,6 +530,20 @@
                     <div class="col s12 m8">
                         <div class="card-panel">
                             <h4>Mehrweg-Tragetaschen aus Kunststoff</h4>
+                            <div class="row">
+                                <div class="col s12 m9">
+                                    <ul>
+                                        <li><span><strong>Gewicht:</strong> 182 Gramm</span></li>
+                                        <li><span><strong>Biologisch abbaubar:</strong> ❌</span></li>
+                                        <li><span><strong>Benutzungsdauer:</strong> Bereits nach drei Nutzungen umweltfreundlicher als eine Plastiktüte  </span></li>
+                                        <li><span><strong>Energieaufwand:</strong> - </span></li>
+                                        <li><span><strong>Verwendetes material:</strong> Bis zu 90 Prozent aus recyceltem Material, wie z.B. alten PET-Getränkeflaschen hergestellt. Polypropylen, Polyester oder Polyenterephtalat (PET)</span></li>
+                                    </ul>
+                                </div>
+                                <div class="col s12 m3">
+                                    <span class="emoji">👌</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col s12 m4">
@@ -485,12 +562,18 @@
                         <div class="card-panel">
                             <h4>Recyclingtüte</h4>
                             <div class="row">
-                              <div class="col s12 m8">
-
-                              </div>
-                              <div class="col s12 m4">
-
-                              </div>
+                                <div class="col s12 m9">
+                                    <ul>
+                                        <li><span><strong>Gewicht:</strong> 30 Gramm</span></li>
+                                        <li><span><strong>Biologisch abbaubar:</strong> ✅</span></li>
+                                        <li><span><strong>Benutzungsdauer:</strong> Ca: 25 min</span></li>
+                                        <li><span><strong>Energieaufwand:</strong> Durch das Recycling können die  CO2-Emissionen bei der Herstellung um 45 Prozent reduziert werden.</span></li>
+                                        <li><span><strong>Verwendetes material:</strong> Polyethylen mit Recyclinganteilen von mindestens 70 Prozent.</span></li>
+                                    </ul>
+                                </div>
+                                <div class="col s12 m3">
+                                    <span class="emoji">👍</span>
+                                </div>
                             </div>
                         </div>
                     </div>
