--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 <body id="home">
     <header>
         <div class="navbar-fixed">
-            <nav>
+            <nav class="transparent">
                 <div class="nav-wrapper">
-                    <a href="#!" class="brand-logo">Logo</a>
+                    <a href="#!" class="brand-logo center">Plastik Projekt</a>
                     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#alternatives">Alternativen</a></li>
                         <li><a href="#essays">Essays</a></li>
-                        <li><a href="#vergleich">Vergleich</a></li>
+                        <li><a href="#film">Filmchen</a></li>
                     </ul>
                     <ul class="side-nav" id="mobile-demo">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#alternatives">Alternativen</a></li>
                         <li><a href="#essays">Essays</a></li>
-                        <li><a href="#vergleich">Vergleich</a></li>
+                        <li><a href="#film">Filmchen</a></li>
                     </ul>
                 </div>
             </nav>
@@ -72,8 +72,11 @@
                         <div class="card-panel">
                             <div class="icon-block">
                                 <img src="images/brokoli.gif" class="responsive-img" alt="" />
-                                <h5>Schadstoffe</h5>
-                                <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+                                <h5>Die Plastiktüte</h5>
+                                <p class="light">Die Plastiktüte gibt es in allen Farben und vielen Ausführungen, wir nutzen sie immer wen wir Fleisch Gemüse oder andere  Bakterien anfälligen Lebensmittel kaufen.
+Das erste mal Kramen 1961 Plastiktüten zu Einsatz in dem Kaufhaus Horten wegen ihres Aussehen wurden sie zuerst Hemdchentüten genannt. Sie sind Wasserdicht und leicht und scheinen unersetzlich doch sie verbrauchen viele Ressourcen.
+Jedes Jahr werden schätzungsweise 1 Billion Plastiktüten Produziert um den Weltweiten Konsum nachzukommen.
+Zur Herstellung benötigt man 80 Milliliter Erdöl das sind im Jahr etwa 76 Milliarden Liter.</p>
                             </div>
                         </div>
                     </div>
@@ -101,12 +104,16 @@
                         <h3><i class="mdi-content-send black-text"></i></h3>
                         <h4>Was ist denn so schlimm an Plastiktüten?</h4>
                         <div class="left-align light">
-                            <p>Plastiktüten an sich sind Super. Sie sind leicht, billig, wasserdicht und ausgesprochen robust. Sie schützen den Inhalt vor Feuchtigkeit, Schmutz, Schädlingen, etc. Ein wichtiger Faktor ist außerdem, dass sie wiederverwendbar
-                                sind. Allerdings wir sie so gut wie nie wiederverwendet.</p>
-                            <p>Plastik ist für uns und vor allem für die Umwelt wirklich schädlich.Es gibt 600 verschieden Chemikalien, die in Plastik vorkommen können und 200 davon gelten als besonders bedenklich. Bei Männern kann eine hohe Kunstoff konzentration
-                                im Blut zu Impotenz oder bis zu 50 Prozent weniger Spermien sorgen. Auch Frauen leiden unter Plastik: Die giftigen Stoffe gelangen in die Eier und schädigen so schon die nächste Generation. Man spricht davon, dass Krebs,
-                                Asthma und Allergien durch Plastik entstehen können; dass Unkonzentriertheit und Fettleibigkeit mit Plastik in Zusammnhang gebracht wird. Sogar dümmer soll uns das Plastik machen. Und selbst im Krankenhaus wird uns das
-                                Plastik in Form von Weichmachern im PVC gefährlich. Denn dies ist in Infusionsschläuchen und Blutbeuteln enthalten.</p>
+                            <p>
+                                Plastiktüten an sich sind Super. Sie sind leicht, billig, wasserdicht und ausgesprochen robust. Sie schützen den Inhalt vor Feuchtigkeit, Schmutz, Schädlingen, etc. Ein wichtiger Faktor ist außerdem, dass sie wiederverwendbar sind. Allerdings wir sie
+                                so gut wie nie wiederverwendet.
+                            </p>
+                            <p>
+                                Plastik ist für uns und vor allem für die Umwelt wirklich schädlich.Es gibt 600 verschieden Chemikalien, die in Plastik vorkommen können und 200 davon gelten als besonders bedenklich. Bei Männern kann eine hohe Kunstoff konzentration im Blut zu Impotenz
+                                oder bis zu 50 Prozent weniger Spermien sorgen. Auch Frauen leiden unter Plastik: Die giftigen Stoffe gelangen in die Eier und schädigen so schon die nächste Generation. Man spricht davon, dass Krebs, Asthma und Allergien
+                                durch Plastik entstehen können; dass Unkonzentriertheit und Fettleibigkeit mit Plastik in Zusammnhang gebracht wird. Sogar dümmer soll uns das Plastik machen. Und selbst im Krankenhaus wird uns das Plastik in Form von Weichmachern
+                                im PVC gefährlich. Denn dies ist in Infusionsschläuchen und Blutbeuteln enthalten.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -320,8 +327,8 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <div class=" card-panel">
+            <div id="film" class="container">
+                <div class="card-panel">
                     <div class="row ">
                         <!-- <div class="col s12">
                             <h5 class="center">Bewegte bilder sind toll</h5> Schau dir jetzt den Film "Plasc Planet" an oder einen unserer Filme :)
