--- a/index.html
+++ b/index.html
@@ -71,26 +71,26 @@
                     <div class="col s12 m6 center">
                         <div class="card-panel">
                             <div class="icon-block">
-                                <img src="images/brokoli.gif" class="responsive-img" alt="" />
+                                <img src="images/tueteimsand2.jpg" class="responsive-img" alt="" />
                                 <h5>Die Plastiktüte</h5>
-                                <p class="light">Die Plastiktüte gibt es in allen Farben und vielen Ausführungen, wir nutzen sie immer wen wir Fleisch Gemüse oder andere  Bakterien anfälligen Lebensmittel kaufen.
-Das erste mal Kramen 1961 Plastiktüten zu Einsatz in dem Kaufhaus Horten wegen ihres Aussehen wurden sie zuerst Hemdchentüten genannt. Sie sind Wasserdicht und leicht und scheinen unersetzlich doch sie verbrauchen viele Ressourcen.
-Jedes Jahr werden schätzungsweise 1 Billion Plastiktüten Produziert um den Weltweiten Konsum nachzukommen.
-Zur Herstellung benötigt man 80 Milliliter Erdöl das sind im Jahr etwa 76 Milliarden Liter.</p>
+                                <p class="light">
+                                    Die Plastiktüte gibt es in allen Farben und vielen Ausführungen, wir nutzen sie immer wen wir Fleisch Gemüse oder andere Bakterien anfälligen Lebensmittel kaufen. Das erste mal Kramen 1961 Plastiktüten zu Einsatz in dem Kaufhaus Horten wegen ihres Aussehen
+                                    wurden sie zuerst Hemdchentüten genannt. Sie sind Wasserdicht und leicht und scheinen unersetzlich doch sie verbrauchen viele Ressourcen. Jedes Jahr werden schätzungsweise 1 Billion Plastiktüten Produziert um den Weltweiten
+                                    Konsum nachzukommen. Zur Herstellung benötigt man 80 Milliliter Erdöl das sind im Jahr etwa 76 Milliarden Liter.
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <!-- Aneinander gelegt würden die Jährlich alleine in Deutschland verbrauchten Plastiktüten 39 die umwicklen.
-                    1 Billion ist eine menge die man sich kaum vorstellen kann. Aber der Weltweite Plastiktüten verbrauch liegt bei 1 Billion Stück.
-                    90 Prozent der verbrauchten Plastiktüten landen auf Mülldeponien
-                     -->
+
                     <div class="col s12 m6 center">
                         <div class="card-panel">
                             <div class="icon-block">
                                 <img src="images/recycle_yeah.gif" class="responsive-img" alt="" />
                                 <h5>Recycling, die Rettung?</h5>
-                                <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system
-                                    across all platforms allow for a more unified user experience.</p>
+                                <p class="light">
+                                    Recycling klingt im ersten Moment nach einer Supersache, aber nur auf den Ersten Blick. Denn auf den Zweiten Blick bringt es sehr viele Probleme mit sich, denn viele Tüten sind nur teilweise Recyclingfähig und wenn dann brauchen sie viel länger als z.B
+                                    Bioabfall um abgebaut zu werden deshalb werden sie auf Recycling Höfen oft aussortiert und verbrannt und das verschwändet sehr viel Ressourcen. Insgesamt werden nur 7 Prozent aller Recyclingtüten Recycelt
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -292,7 +292,7 @@ Zur Herstellung benötigt man 80 Milliliter Erdöl das sind im Jahr etwa 76 Mill
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row">
                     <div class="col s12 m6">
                         <div class="card-panel">
@@ -326,7 +326,7 @@ Zur Herstellung benötigt man 80 Milliliter Erdöl das sind im Jahr etwa 76 Mill
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div id="film" class="container">
                 <div class="card-panel">
                     <div class="row ">
