Updated Materialize and some page contents

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Plastik Projekt</title>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 </head>
 
 <body id="home">
@@ -21,19 +20,22 @@
                     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#alternatives">Alternativen</a></li>
+                        <li><a href="#ueber">Über</a></li>
                         <li><a href="#essays">Essays</a></li>
                         <li><a href="#film">Filmchen</a></li>
-                    </ul>
-                    <ul class="side-nav" id="mobile-demo">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#alternatives">Alternativen</a></li>
-                        <li><a href="#essays">Essays</a></li>
-                        <li><a href="#film">Filmchen</a></li>
+                        <li><a href="#auswertung">Auswertung</a></li>
+
                     </ul>
                 </div>
             </nav>
         </div>
+        <ul class="side-nav" id="mobile-demo">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#ueber">Über</a></li>
+            <li><a href="#essays">Essays</a></li>
+            <li><a href="#film">Filmchen</a></li>
+            <li><a href="#auswertung">Auswertung</a></li>
+        </ul>
     </header>
     <main>
         <div class="black">
@@ -99,7 +101,7 @@
         </div>
         <div class="gradient-1">
             <div class="container">
-                <div class="row card-panel">
+                <div id="ueber" class="row card-panel">
                     <div class="col s12 center">
                         <h3><i class="mdi-content-send black-text"></i></h3>
                         <h4>Was ist denn so schlimm an Plastiktüten?</h4>
@@ -341,7 +343,7 @@
                 </div>
             </div>
 
-            <div class="container">
+            <div id="auswertung" class="container">
                 <div class="card-panel">
                     <div class="row">
                         <h3 class="center">Auswertung</h3>
