Fixed table css bug on tablets

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                             <button type="button" class="trotzdem waves-effect waves-light btn" name="button">Nerv mich nicht! Zeigs mir trotzdem</button>
                         </div>
                     </div>
-                    <div class="row">
+                    <div style="overflow-x: scroll;" class="row">
                         <table id="table" class="hide-on-small-and-down bordered responsive-table ">
                             <tr>
                                 <th></th>
