Fixed navbar transparent transition

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body id="home">
     <header>
-        <div class="navbar-fixed">
+        <div style="transform: translateZ(0); transition: 0.3s;" class="navbar-fixed">
             <nav class="transparent">
                 <div class="nav-wrapper">
                     <a href="#!" class="brand-logo center">Plastik Projekt</a>
