--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="home">
     <header>
         <div class="navbar-fixed">
-            <nav class="transparent">
+            <nav style="transition: 0.3s;" class="transparent">
                 <div class="nav-wrapper">
                     <a href="#!" class="brand-logo center">Plastik Projekt</a>
                     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
